# wasi-nn-test

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
legacy/simple-test/: Cargo.toml
legacy/simple-test/src/: main.rs
legacy/wasmtime-onnx/: Cargo.toml  README.md  build.rs
native/: Cargo.toml  Dockerfile.arm64  Dockerfile.armv7  README.md
native/src/: main.rs
simple/simple-onnx/: Cargo.toml
simple/simple-test/: Cargo.toml
wasm/local-names/: Cargo.toml
wasm/local-names/.cargo/: config.toml
wasm/local-names/src/: lib.rs  local_names.rs
wasm/simple-onnx/: Cargo.toml
wasm/simple-onnx/src/: main.rs
wasm/wasi-nn/: Cargo.toml  README.md
wasm/wasi-nn/src/: main.rs
wasm/wasmtime-onnx/src/: lib.rs  onnx_runtime.rs  witx.rs
wasm/wasmtime-test/: Cargo.toml  README.md  build.rs
wasm/wasmtime-test/src/: main.rs
wasm/wasmtime-test/wasi-nn/: Cargo.toml  README.md  onnxruntime.rs
