[package]
name = "onnx-native-test"
version = "0.0.1"
authors = ["Ville Heikkilä"]

[dependencies]
image = "0.24.8"
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
tracing-subscriber = "0.3.18"

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
