[package]
name = "onnx-native-test"
version = "0.0.1"
authors = ["Ville Heikkilä"]

[dependencies]
image = "0.25.1"
ndarray = "0.15.6"
ort = { version = "2.0.0-rc.1", default-features = true, features = ["ndarray", "download-binaries", "copy-dylibs"] }
# ort = { version = "2.0.0-alpha.4", default-features = false, features = ["ndarray", "download-binaries", "copy-dylibs", "load-dynamic", "cuda", "openvino", "tensorrt"] }
tracing-subscriber = "0.3.18"

# [profile.release]
# rpath = true

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
