[package]
name = "local-names"
version = "0.0.2"
authors = ["Ville Heikkilä"]

[dependencies]
glob = "0.3.1"
lazy_static = "1.4.0"

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
