[package]
name = "simple-onnx"
version = "0.0.1"
authors = ["Ville Heikkilä"]

[dependencies]
image = "0.24.8"
tract-onnx = "0.20.18"
# wit-bindgen = "0.12.0"
local-names = { path = "../local-names" }

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
