[package]
name = "simple-onnx"
version = "0.0.2"
authors = ["Ville Heikkilä"]

[dependencies]
image = "0.25.1"
tract-onnx = "0.21.5"
local-names = { path = "../local-names" }

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
