[package]
name = "wasi-nn-onnx-test"
version = "0.0.1"
authors = ["Ville Heikkilä"]

[dependencies]
anyhow = "1.0.82"
image = "0.25.1"
ndarray = "0.15.6"
wasi-nn = "0.6.0"
local-names = { path = "../local-names" }

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
