[package]
name = "wasmtime-test"
version = "0.0.1"
authors = ["Ville Heikkilä"]

[dependencies]
anyhow = "1.0.80"
tracing = "0.1.26"
thiserror = "1.0.25"
cap-std = "3.0.0"
local-names = { path = "../local-names" }
wasmtime = { path = "../../wasmtime-repo/crates/wasmtime", features = ["component-model", "runtime", "cranelift"] }
wasmtime-wasi = { path = "../../wasmtime-repo/crates/wasi" }
wasi-common = { path = "../../wasmtime-repo/crates/wasi-common", features = ["sync"] }
wasmtime-wasi-nn = { path = "../../wasmtime-repo/crates/wasi-nn", features = ["onnx"] }

[build-dependencies]
walkdir = "2.5.0"
