[package]
name = "wasmtime-test"
version = "0.0.2"
authors = ["Ville Heikkilä"]

[dependencies]
anyhow = "1.0.86"
# tracing = "0.1.40"
# thiserror = "1.0.61"
cap-std = "3.1.0"
local-names = { path = "../local-names" }
wasmtime = { path = "../../wasmtime-repo/crates/wasmtime", features = ["component-model", "runtime", "cranelift"] }
wasmtime-wasi = { path = "../../wasmtime-repo/crates/wasi" }
wasi-common = { path = "../../wasmtime-repo/crates/wasi-common", features = ["sync"] }
wasmtime-wasi-nn = { path = "../../wasmtime-repo/crates/wasi-nn", features = ["onnx"] }

[build-dependencies]
# walkdir = "2.5.0"

[profile.release-lto]
inherits = "release"
lto = true
strip = "debuginfo"

[profile.release-lto.build-override]
opt-level = 3
codegen-units = 256
debug = false
debug-assertions = false
